--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node dist/main.js",
-    "start:prod": "MODE_ENV=production node dist/main.js",
+    "clean:build": "rm -rf ./dist && tsc",
+    "prod": "yarn clean:build && NODE_ENV=production pm2 start ./dist/main.js -- --production",
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "dev": "NODE_ENV=local nodemon"
+    "dev": "NODE_ENV=development nodemon"
   },
   "dependencies": {
     "@types/express": "4.17.3",
@@ -21,6 +21,7 @@
     "jade": "~1.11.0",
     "mongoose": "5.9.5",
     "morgan": "~1.9.1",
+    "pm2": "^4.2.3",
     "winston": "3.2.1"
   },
   "devDependencies": {
