updated sample env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 APP_HOST=localhost
-APP_PORT=5001
+APP_PORT=5000
 
-DB_HOST=ds145951.mlab.com
-DB_USER=root
-DB_PASSWORD=root123
-DB_PORT=45951
-DB_DATABASE=test_db
+DB_HOST=database_host
+DB_USER=database_user
+DB_PASSWORD=database_password
+DB_PORT=database_port
+DB_DATABASE=database_name
