--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "dev": "NODE_ENV=development nodemon"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "4.17.3",
     "@types/mongoose": "5.7.6",
     "@types/typescript": "2.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "8.2.0",
     "express": "~4.16.1",
