--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "lusca": "^1.6.1",
     "mongoose": "5.9.5",
     "morgan": "~1.9.1",
     "pm2": "^4.2.3",
