--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "winston": "3.2.1"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/winston": "2.4.4",
     "concurrently": "5.1.0",
     "nodemon": "2.0.2",
+    "swagger-ui-express": "^4.1.3",
     "ts-node": "8.7.0",
     "tsconfig-paths": "3.9.0",
     "typescript": "3.8.3"
