--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "seed:prod": "NODE_ENV=production ts-node ./src/seed/seeder.ts"
   },
   "dependencies": {
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "4.17.3",
     "@types/mongoose": "5.7.6",
     "@types/typescript": "2.0.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
