--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "~2.6.9",
     "dotenv": "8.2.0",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "lusca": "^1.6.1",
