pm2 cluster mode added to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean:build": "rm -rf ./dist && tsc",
-    "prod": "yarn clean:build && NODE_ENV=production pm2 start ./dist/main.js -- --production",
+    "prod": "yarn clean:build && NODE_ENV=production pm2 start dist/main.js -i max -- --production",
     "prod:deploy": "tsc && pm2 restart all",
     "build": "tsc",
     "watch-ts": "tsc -w",
