--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "4.17.3",
+    "@types/lusca": "^1.6.1",
     "@types/mongoose": "5.7.6",
     "@types/typescript": "2.0.0",
     "compression": "^1.7.4",
