--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "winston": "3.2.1"
   },
   "devDependencies": {
+    "@types/mongoose-paginate": "5.0.8",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/winston": "2.4.4",
     "concurrently": "5.1.0",
