--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
-        "baseUrl": "./src"
+        "baseUrl": "./src",
+        "allowJs": true 
     },
     "exclude": ["node_modules", "dist"]
 }
