--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "4.17.3",
+    "@types/joi": "^14.3.4",
     "@types/lusca": "^1.6.1",
     "@types/mongoose": "5.7.6",
     "@types/typescript": "2.0.0",
@@ -28,6 +29,7 @@
     "express-basic-auth": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^14.3.1",
     "lusca": "^1.6.1",
     "mongoose": "5.9.5",
     "morgan": "~1.9.1",
