ssl file path added to app.ts and sample .env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
 APP_PORT=5001
 
-DB_HOST=database_host
-DB_USER=database_user
-DB_PASSWORD=database_password
-DB_PORT=database_port
-DB_DATABASE=database_name
+DB_HOST=localhost
+DB_USER=
+DB_PASSWORD=
+DB_PORT=27017
+DB_DATABASE=covid19
+
+APP_CSP_SRC='self'
+
+SSL_KEY=/etc/letsencrypt/live/api-prod.covidnepal.org/privkey.pem
+SSL_CERT=/etc/letsencrypt/live/api-prod.covidnepal.org/cert.pem
+SSL_CA=/etc/letsencrypt/live/api-prod.covidnepal.org/chain.pem
