--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prod:deploy": "tsc && yarn pm2 restart all",
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "dev": "NODE_ENV=development nodemon",
+    "dev": "NODE_ENV=local nodemon",
     "seed:dev": "NODE_ENV=development ts-node ./src/seed/seeder.ts",
     "seed:prod": "NODE_ENV=production ts-node ./src/seed/seeder.ts"
   },
