--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongoose": "5.9.5",
     "morgan": "~1.9.1",
     "pm2": "^4.2.3",
-    "winston": "3.2.1"
+    "winston": "3.2.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/mongoose-paginate": "5.0.8",
