--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,12 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": "./src",
+        "outDir": "./dist",
+        "baseUrl": "./",
         "allowJs": true 
     },
-    "exclude": ["node_modules", "dist"]
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": ["node_modules"]
 }
