--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/joi": "^14.3.4",
     "@types/lusca": "^1.6.1",
     "@types/mongoose": "5.7.6",
+    "@types/node-cron": "^2.0.3",
     "@types/typescript": "2.0.0",
+    "axios": "^0.19.2",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -34,6 +36,7 @@
     "lusca": "^1.6.1",
     "mongoose": "5.9.5",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
     "pm2": "^4.2.3",
     "winston": "3.2.1"
   },
