--- a/newsfeed/package.json
+++ b/newsfeed/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "mongoose": "^5.9.6",
     "strapi": "3.0.0-beta.19.3",
     "strapi-admin": "3.0.0-beta.19.3",
-    "strapi-utils": "3.0.0-beta.19.3",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.19.3",
+    "strapi-connector-bookshelf": "3.0.0-beta.19.3",
+    "strapi-connector-mongoose": "^3.0.0-beta.19.4",
     "strapi-plugin-content-manager": "3.0.0-beta.19.3",
-    "strapi-plugin-users-permissions": "3.0.0-beta.19.3",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.19.3",
     "strapi-plugin-email": "3.0.0-beta.19.3",
     "strapi-plugin-upload": "3.0.0-beta.19.3",
-    "strapi-connector-bookshelf": "3.0.0-beta.19.3",
-    "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "strapi-plugin-users-permissions": "3.0.0-beta.19.3",
+    "strapi-utils": "3.0.0-beta.19.3"
   },
   "author": {
     "name": "A Strapi developer"
