--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   },
   "devDependencies": {
     "@types/mongoose-paginate": "5.0.8",
+    "@types/swagger-jsdoc": "3.0.2",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/winston": "2.4.4",
     "concurrently": "5.1.0",
     "nodemon": "2.0.2",
+    "swagger-jsdoc": "4.0.0",
     "swagger-ui-express": "^4.1.3",
     "ts-node": "8.7.0",
     "tsconfig-paths": "3.9.0",
