--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,6 @@ DB_DATABASE=covid19
 
 APP_CSP_SRC='self'
 
-SSL_KEY=/etc/letsencrypt/live/api-prod.covidnepal.org/privkey.pem
-SSL_CERT=/etc/letsencrypt/live/api-prod.covidnepal.org/cert.pem
-SSL_CA=/etc/letsencrypt/live/api-prod.covidnepal.org/chain.pem
+SSL_KEY=
+SSL_CERT=
+SSL_CA=
