changed ECR location

--- a/buildspec-dev.yml
+++ b/buildspec-dev.yml
@@ -9,7 +9,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=887384599564.dkr.ecr.us-east-1.amazonaws.com/extract-fuse-api-uat
+      - REPOSITORY_URI=887384599564.dkr.ecr.us-west-2.amazonaws.com/covid-nepal-api-dev
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
